Got text highlighting to work

--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <hmtl>
 	<head>
-		<title>Click it</title>
+		<title>Wiki Lookup</title>
 	</head>
 	<style type="text/css">
 		body {
@@ -13,8 +13,9 @@
 		}
 	</style>
 	<body>
-		<h1>Click It</h1>
-		<button id="clickIt">Click</button>
+		<h1>Wiki Lookup</h1>
+		<p id="output"></p>
+		<button id="clickIt">Lookup</button>
 	</body>
 	<script src="popup.js"></script>
 </hmtl>
