Popup now shows highlighted text and wiki search result link or error

--- a/popup.html
+++ b/popup.html
@@ -11,11 +11,19 @@
 			font-size: 15px;
 			text-align: center;
 		}
+		#searchResult {
+			color: green;
+		}
+		#searchError {
+			color: red;
+		}
+
 	</style>
 	<body>
 		<h1>Wiki Lookup</h1>
-		<p id="output"></p>
-		<button id="clickIt">Lookup</button>
+		<p id="textSelection"></p>
+		<p id="searchResult"></p>
+		<p id="searchError"></p>
 	</body>
 	<script src="popup.js"></script>
 </hmtl>
